--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://shahicodes.github.io/Tic-Tac-Toe/",
+  "homepage": "https://shahicodes.github.io/Tic-Tac-Toe-/",
   "name": "tictactoe",
   "private": true,
   "version": "0.0.0",
